--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,6 +4,7 @@
 
 /* Theme Colors */
 
+$green-lighter: #37B382;
 $green-light: #2f996f;
 $green: #28805D;
 $green-dark: #20664a;
